2011-02-19  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/vt100.c: Cleanups: Delete everything that was in OLD blocks.
	  Do not explicitly set global variables to 0.

	* src/vt100.c, man/minicom.1: Change timestamp style, prepend every
	  line. Add in manpage.

	* src/dial.c src/help.c src/ipc.c src/minicom.c src/minicom.h
	  src/vt100.c src/vt100.h: Addition by Mark Einon
	  <mark.einon@gmail.com> to add current date/time to each line.

2011-02-14  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/file.c: Only enter directory if we have read permissions to
	  get directory listings, by Jan Görig.

	* src/file.c, src/getsdir.c: Cleanup and simplify.

2011-02-12  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* man/runscript.1, man/minicom.1: Fixes by John Bradshaw

2011-02-07  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/main.c: Avoid redraw of status line in Offline mode when
	  nothing changed.

2011-02-05  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.c: Do not lose line wrap setting over terminal resizes.

	* src/main.c: Simplify status line update, also makes status
	  messages display the amount of time they are actually supposed
	  to display.

2011-01-29  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* configure.in: Change version to 2.5.

2011-01-24  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/script.c: Make word handling more dynamic, and thus allowing
	  words > 89 chars. Reported via Debian BTS #610511.

	* po/da.po: Update from translation team.

2011-01-16  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* NEWS: Update.

	* ChangeLog: Convert to UTF8 encoding.

	* man/ascii-xfr.1: Fix typos, Thanks Jan Görig,
	  https://bugzilla.redhat.com/show_bug.cgi?id=669098

	* src/rwconf.c: Fix config file parsing bug, Thanks Jan Görig,
	  https://bugzilla.redhat.com/show_bug.cgi?id=669406

2011-01-09  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/da.po: Update from translation team.
